fix: correct doc inconsistencies across spec, report, and scripts
- spec: update baseline to 1c/1Gi, fix scenario resource values,
  add scenarios 08-11, update expected results with actual data
- run-scenario.sh: fix pod-sizing comments (0.25c→0.5c, 0.75c→1.5c)
- run-all-scenarios.sh: add missing scenarios 08-11
- experiment-report-v2.md: fill in ZGC/G1GC data from
  zgc-vs-g1gc-comparison.md, replace 待补测 with actual results,
  replace pending ZGC section with real comparison table